fixing code style